commit 2 agregando servicios

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 </head>
 <body>
     <h2>PODUCTOS</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
         Eum culpa sapiente dignissimos soluta blanditiis. Nihil 
         voluptatem eaque necessitatibus. Iusto totam assumenda
          quas quasi velit libero enim quidem? Cupiditate, expedita nulla.</p>
+    <h2>SERVICIOS</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Eum culpa sapiente dignissimos soluta blanditiis. Nihil 
+        voluptatem eaque necessitatibus. Iusto totam assumenda
+         quas quasi velit libero enim quidem? Cupiditate, expedita nulla.</p>     
 </body>
 </html>
