Sobre mi agregado

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
         Eum culpa sapiente dignissimos soluta blanditiis. Nihil 
         voluptatem eaque necessitatibus. Iusto totam assumenda
-         quas quasi velit libero enim quidem? Cupiditate, expedita nulla.</p>     
-</body>
+         quas quasi velit libero enim quidem? Cupiditate, expedita nulla.</p> 
+    <h2>SOBRE NOSOTROS</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+         Eum culpa sapiente dignissimos soluta blanditiis. Nihil 
+         voluptatem eaque necessitatibus. Iusto totam assumenda
+          quas quasi velit libero enim quidem? Cupiditate, expedita nulla.</p>     
+ </body>
 </html>
