Agregado de section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Botines de fútbol</title>
 </head>
 <body>
+    
+    <section>
     <h2>PODUCTOS</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
         Eum culpa sapiente dignissimos soluta blanditiis. Nihil 
@@ -19,6 +21,8 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
          Eum culpa sapiente dignissimos soluta blanditiis. Nihil 
          voluptatem eaque necessitatibus. Iusto totam assumenda
-          quas quasi velit libero enim quidem? Cupiditate, expedita nulla.</p>     
+          quas quasi velit libero enim quidem? Cupiditate, expedita nulla.</p>
+    </section>
+
  </body>
 </html>
